Update meta information and enhance content structure; add FEDS Handbook section and update contact link

--- a/pages/Strategy/Tools&Setup.mdx
+++ b/pages/Strategy/Tools&Setup.mdx
@@ -1,29 +1,45 @@
----
-title : Template
----
+import { Cards, Card, Callout, Steps } from 'nextra/components'
 
-import { Cards, Card } from 'nextra/components'
+import { FaCode, FaExpeditedssl, FaPlug, FaCube, FaRegLightbulb, FaBuildingShield } from "react-icons/fa6";
+import {ImCogs} from "react-icons/im";
+import {FaRobot} from "react-icons/fa";
+import Head from 'next/head';
 
-# General Rules:
-1. **Be Consistent**: Use the same style and formatting throughout the guide.
-2. **Be Concise**: Keep your writing clear and to the point.
-3. **Be Informative**: Provide useful information that helps the reader.
 
-# Page Structure:
-1. **Title**: The title should be descriptive and concise.
-2. **Import Statements**: Import any components or icons you need for the page.
-3. **Introduction**: Provide an overview of the topic and what the reader can expect to learn.
-4. **Content**: Organize the content into sections with headings and subheadings.
-5. **Links**: Include links to relevant resources or external websites.
 
-# Programming Rules:
-1. No-spaces in file names.
-2. Add your file name to the _meta.json file.
-```js
-export default {
-  foo: '',
-  1992_10_21: '',
-  1: ''
-}
-```
-3. Use the same style and formatting throughout the guide.
+
+# Scouting and Strategy Tools and Setup
+
+## Season 2024-25
+
+### Scouting App
+
+This year, we developed a Scouting System from the ground up, consisting of a Web App, a Mobile App, and a Backend Server. The Web App is used by the Scouting Team to input data and monitor all the scouts' progress in real-time. It can also export the data into an Excel spreadsheet. The Mobile App is used by the Scouting Team to input data, and the Backend Server is used to store the data, provide it to the Strategy Team, and simulate real matches.
+
+<Callout emoji="📱">
+  The Simulation depends on Wifi and the Backend Server. Make sure to have a stable connection.
+</Callout>
+
+### Scout-Ops-Android Setup
+
+The Scout-Ops-Android App is used by the Scouting Team to input data. It is available on the Amazon App Store. To set it up, follow these steps:
+
+<Steps>
+
+### <img style={{ maxHeight: 600}} src="https://i.imgur.com/ddFCpFS.png"/> 
+
+  <Steps>
+
+    #### Click on the Amazon App Store Icon.
+  
+
+  </Steps>
+
+
+
+### <img style={{ maxHeight: 600}} src="https://i.imgur.com/xM7vqof.png"/>
+
+Click on the Settings Icon.
+
+
+</Steps>
