--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,4 @@
 import { Cards, Card } from 'nextra/components'
-
 import { FaCode, FaExpeditedssl, FaPlug, FaCube, FaRegLightbulb, FaBuildingShield } from "react-icons/fa6";
 import {ImCogs} from "react-icons/im";
 import {FaRobot} from "react-icons/fa";
@@ -56,3 +55,12 @@ We have put together what we did each week in the 2025 season. This is a great w
     </Card>
 </Cards>
 
+## What every member should know
+
+FEDS Handbook has been created to help you learn about a general overview of what you should know as a member of FEDS. This includes information about the team, the tools we use, and the resources available to you
+
+<Cards>
+    <Card title="FEDS Handbook" href="/FEDSHandbook" icon={FaExpeditedssl()}>
+        The FEDS Handbook is a comprehensive guide to everything you need to know as a member of FEDS. It covers team structure, tools, resources, and more.
+    </Card>
+</Cards>
