Refactor programming section: update titles, enhance introduction, and fix links

--- a/pages/Programming/Tools&Setup.mdx
+++ b/pages/Programming/Tools&Setup.mdx
@@ -29,7 +29,7 @@ Welcome to the Programming subgroup! This guide is designed to help you get star
 <Card title="National Instruments Tools" target="_blank" href="https://www.ni.com/en/support/downloads/software-products/download.labview-software-for-frc.html" icon={<FaTools/>}/>
 <Card title="LimeLight" target="_blank" href="https://limelightvision.io/pages/downloads"  icon={<RiCameraLensFill/>} />
 <Card title="Photon Vision" target="_blank" href="https://github.com/PhotonVision/photonvision/releases"  icon={<RiCameraLensLine/>} />
-<Card title="REV Robotics Spark Max Client" target="_blank" href="https://www.revrobotics.com/sparkmax-software/#spark-max-client"  icon={<SiIrobot/>} />
+<Card title="REV Client" target="_blank" href="https://www.revrobotics.com/sparkmax-software/#spark-max-client"  icon={<SiIrobot/>} />
 <Card title={"PathPlanner"} target={"_blank"} href={"https://github.com/mjansen4857/pathplanner/releases/tag/2024.1.7"} icon={<FaRoad/>} />
 <Card title={"Apple Bonjour"} target={"_blank"} href={"https://support.apple.com/en-us/106380"} icon={<LuRadioTower/>} />
 </Cards>
