--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -18,7 +18,7 @@ Welcome to FRC Team 201's Tools and Resources! This guide is a comprehensive col
 To support your learning journey, we have a variety of subgroups that focus on different aspects of robotics. These include:
 
 <Cards>
-    <Card title="Programming" href="/Programming/Tools&Setup" icon={FaCode()}>
+    <Card title="Programming" href="/Programming" icon={FaCode()}>
         The programming subgroup focuses on developing the software that controls the robot. Members learn programming languages like Java and C++ and work on autonomous routines and driver controls.
     </Card>
     <Card title="Electrical" href="/Electrical/Tools&Setup" icon={FaPlug()}>
