--- a/pages/Programming/index.mdx
+++ b/pages/Programming/index.mdx
@@ -7,23 +7,31 @@ import { Cards, Card } from 'nextra/components';
     <meta property="og:title" content="Intro - FEDS201" key="title" />
 </Head>
 
-# Intro to Java
-
-### Introduction
+# Introduction
 
 
-Hi there, programmer! You have found your way to the programming section of the FEDS toolkit. We hope you will stay a while as we teach you about the basics of programming FRC robots, 
-as well as more advanced topics to grow your knowledge. Whether you're just getting started with robot programming or you're looking to refine your skills and tackle more complex tasks, 
-you're in the right place.
+> Oh no. Oh, no, no, no. What have you done? Somehow, someway, you’ve wandered into the cursed domain of FRC robot programming—the unholy intersection of shattered dreams, endless bugs, and the cold, unfeeling void of Java stack traces. Abandon hope, all ye who enter here, for you are about to embark on a journey so fraught with frustration that even the bravest of souls would quiver at the thought.  
 
-Throughout this guide, we'll walk you through the fundamentals of FRC robot programming, including how to set up your development environment, write your first commands, and test your code 
-on the robot. As you progress, you'll learn about advanced topics such as vision integration, autonomous control, and optimizing robot behavior.
+FRC programming isn’t just a skill—it’s a test of your very will to exist. Each keystroke inches you closer to madness, every compile error another dagger in your heart. You’ll spend hours crafting code only to watch in horror as your robot smashes into the wall like a drunken moose, ignoring every logical command you so painstakingly wrote.  
 
-We’ve structured this documentation to be useful for all levels of experience. Beginners can start with the basics, while more experienced programmers can dive straight into more sophisticated 
-concepts. Our goal is to help you succeed in building, programming, and troubleshooting your robot, as well as equipping you with the tools and techniques to innovate and push the boundaries
- of what’s possible on the FRC field.
+Why? Because this isn’t just programming. It’s *robot programming*. That means your code isn’t just running in a tidy little digital sandbox. No, it’s fighting tooth and nail with janky hardware, rebellious motors, and sensors that tell bold-faced lies to your face. Think debugging is hard? Try debugging something that’s screaming across the floor at 15 feet per second while *literally* on fire.  
 
-So, let's get started! We’re excited to be part of your journey in FRC programming, and we can’t wait to see what you’ll create.
+> Imagine training a hyperactive raccoon to juggle chainsaws while blindfolded. That’s about the level of cooperation you can expect from an FRC robot.  
+
+Here’s the thing: this isn’t for the faint of heart. Every inch of progress is earned in blood, sweat, and tears. Every line of working code is a miracle. And yet, the dark truth is that it will break again—probably during your demo. Resilience won’t just be helpful; it will be the only thing standing between you and total despair.  
+
+**Programming an FRC robot is a cruel, unforgiving grind that chews you up, spits you out, and demands you crawl back for more.**  
+
+But hey, don’t let that scare you off. There’s a twisted sort of joy in this, too. The moment when your robot finally executes an autonomous sequence flawlessly after days of struggle will feel like summiting Everest. You’ll cling to that fleeting victory as a testament to your resilience, even as the robot’s next move shatters your confidence all over again.  
+
+As you work through this guide, remember: failure isn’t just inevitable—it’s practically the point. Embrace the chaos. Learn from it. And when your robot still somehow refuses to cooperate, just remember that the rest of us are suffering right alongside you.  
+
+So, welcome to the FRC programming team. You didn’t choose this life; it chose you. And now, there’s no turning back.  
+
+Let’s begin.  
+
+---  
+
 
 ### Quick-Navigate
 
