--- a/pages/Programming/index.mdx
+++ b/pages/Programming/index.mdx
@@ -7,7 +7,7 @@ import { Cards, Card } from 'nextra/components';
     <meta property="og:title" content="Intro - FEDS201" key="title" />
 </Head>
 
-# Introduction
+# Introduction*
 
 
 > Wait a minute... How did this happen? Somehow, someway, you’ve wandered into the cursed domain of FRC robot programming—the unholy intersection of shattered dreams, endless bugs, and the cold, unfeeling void of Java stack traces. Abandon hope, all ye who enter here, for you are about to embark on a journey so fraught with frustration that even the bravest of souls would quiver at the thought.  
@@ -30,6 +30,7 @@ So, welcome to the FRC programming team. You didn’t choose this life; it chose
 
 Let’s begin.  
 
+> *This is a satirical introduction to FRC programming. While it’s true that programming can be challenging, it’s also incredibly rewarding. Don’t let the humor scare you off—programming is a valuable skill that will serve you well in robotics and beyond.*
 ---  
 
 
