--- a/pages/PandC/Index.mdx
+++ b/pages/PandC/Index.mdx
@@ -8,108 +8,58 @@ import { Cards, Card, Callout } from 'nextra/components';
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/GmdZ72B.png" />
 </Head>
 
-# Welcome to the People & Culture Section
+# Welcome to People & Culture!
 
-Welcome to the People & Culture section of the FEDS Handbook! Here, you will find all the resources and tools you need to understand and contribute to the culture and community of FRC Team 201.
+Welcome to the People & Culture section of the FEDS Handbook! Here, you will find all the resources and tools you need to understand the culture, community, and STEM initiatives of FRC Team 201. The People & Culture subgroup encompasses the FEDS FRC 201's Safety, Business, Advocacy, Outreach, Fundraising, Social-Media, and Impact initiatives, all of which are further described in upcoming sections.
 
-## Our Mission
+The **Tools & Resources** section covers the important resources we use including our **Sponsor Scouting Tool / Sponsor Acquisition Resources**, **Email drafts to contact companies and other FIRST teams**, and **Impact Award Resources**. The **FEDS' Projects** section covers our events, marketing, and team-building aspects of our team, in addition to going over our team's Impact Award portfolio and our efforts towards advancing our team's mission in 4 categories: **Operation FIRST**, **Operation Outreach**, **Operation Global**, and **OPEX** (Operation: Performance & Excellence).
 
-Our mission is to foster a positive and inclusive environment where every team member feels valued and empowered to contribute their best.
-
-## Key Areas
-
-### Robotics
+## Tools and Resources
 
 <Cards>
-  <Card title="STEM CADettes" href="/PandC/STEMCADettes">
-    Discover our STEM CADettes program.
+  <Card title="Business Plan" href="/PandC/ToolsAndResources/BusinessPlan/businessPlanIntro">
+    Discover our team's award-winning business plan ensuring long-term sustainability.
   </Card>
-  <Card title="FLL Teams" href="/PandC/FLLTeams">
-    Learn about our FLL Teams.
+  <Card title="Impact Award Resources" href="/PandC/ToolsAndResources/ImpactResources/ImpactIntro">
+    Learn how to become competitve when it comes to the Impact Award.
   </Card>
-  <Card title="FTC Teams" href="/PandC/FTCTeams">
-    Discover our FTC Teams.
+  <Card title="Leadership Training" href="/PandC/ToolsAndResources/LeadershipTraining/leadershipTrainingIntro">
+    Learn effective ways to promote leadership and train aspiring team-leads.
   </Card>
-  <Card title="FTC Comp" href="/PandC/FTCComp">
-    Find out about our FTC Competitions.
+  <Card title="Social Media Planning & Management" href="ToolsAndResources/SocialMediaManagement/SocialMediaIntro">
+    Learn about Social Media Management, Photography, Videography, and content planning.
   </Card>
-  <Card title="FLL Tournament" href="/PandC/FLLTournament">
-    Discover our FLL Tournaments.
+  <Card title="Special Project System and Management" href="/PandC/ToolsAndResources/SpecialProjects/SpecialProjectsIntro">
+    Learn about our Special Project's system and how it promotes student-involvement.
   </Card>
-  <Card title="Robot Challenge" href="/PandC/RobotChallenge">
-    Find out about our Robot Challenge.
+  <Card title="Sponsorship Acquisition & Fundraising Resources" href="/PandC/ToolsAndResources/SponsorshipsAndFundraising/SponsorsAndFundsIntro">
+    Learn how to effectively contact companies or to fundraise for your team.
+  </Card>
+  <Card title="Team Calendar Structure & Maintenance" href="/PandC/ToolsAndResources/TeamCalendar/CalendarIntro">
+    Find out how we effectively use a Team Calendar.
   </Card>
 </Cards>
 
-### Family
+## FEDS Projects
 
 <Cards>
-  <Card title="Team Values" href="/PandC/TeamValues">
-    Learn about the core values that guide our team's actions and decisions.
+  <Card title="Operation FIRST" href="/PandC/FedsProjects/OperationFirst/OperationFirstIntro">
+    Learn about what we do to advance the mission of FIRST in our FIRST-based operation.
   </Card>
-  <Card title="Diversity & Inclusion" href="/PandC/DiversityInclusion">
-    Discover our commitment to creating a diverse and inclusive team environment.
+  <Card title="Operation Outreach" href="/PandC/FedsProjects/OperationOutreach/OperationOutreachIntro">
+    Learn about our team's outreach with local companies, teams, and beyond.
   </Card>
-  <Card title="Mentorship" href="/PandC/Mentorship">
-    Explore our mentorship program and how you can get involved.
+  <Card title="Operation Global" href="/PandC/FedsProjects/OperationGlobal/GlobalIntro">
+    Discover our initiatives on a global scale.
   </Card>
-  <Card title="Fundraising" href="/PandC/Fundraising">
-    Learn about our fundraising efforts.
+  <Card title="OPEX" href="/PandC/FedsProjects/Opex/OpexIntro">
+    Explore our team's mission towards sustainability and eficiency and our work to share it with others.
   </Card>
-  <Card title="Business Plan" href="/PandC/BusinessPlan">
-    Discover our business plan.
+  <Card title="Team-Building Events" href="/PandC/FedsProjects/TeamBuildingEvents/FedsDay">
+    Learn how we initiate team-building on our team and make it a lasting impact on students.
   </Card>
-  <Card title="Special Projects" href="/PandC/SpecialProjects">
-    Discover our special projects.
-  </Card>
-  <Card title="Annual Banquet" href="/PandC/AnnualBanquet">
-    Discover our Annual Banquet.
-  </Card>
-</Cards>
-
-### Key Days
-
-<Cards>
-  <Card title="Team Events" href="/PandC/TeamEvents">
-    Find information about upcoming team events and activities.
-  </Card>
-  <Card title="FEDS Orientation" href="/PandC/FEDSOrientation">
-    Get information about FEDS Orientation.
-  </Card>
-  <Card title="FEDS Leadership Training" href="/PandC/FEDSLeadershipTraining">
-    Learn about our leadership training programs.
-  </Card>
-  <Card title="FEDS Day" href="/PandC/FEDSDay">
-    Get information about FEDS Day.
-  </Card>
-  <Card title="FTC FEDS Day" href="/PandC/FTCFEDSDay">
-    Learn about FTC FEDS Day.
-  </Card>
-  <Card title="G201" href="/PandC/G201">
-    Learn about G201.
-  </Card>
-</Cards>
-
-### Outreach
-
-<Cards>
-  <Card title="Impact" href="/PandC/Impact">
-    Learn about the impact of our initiatives.
-  </Card>
-  <Card title="Summer Workshops" href="/PandC/SummerWorkshops">
-    Find out about our summer workshops.
-  </Card>
-  <Card title="Operation FIRST" href="/PandC/OperationFIRST">
-    Learn about Operation FIRST.
-  </Card>
-  <Card title="Operation Outreach" href="/PandC/OperationOutreach">
-    Discover Operation Outreach.
-  </Card>
-  <Card title="Operation Global" href="/PandC/OperationGlobal">
-    Learn about Operation Global.
-  </Card>
-  <Card title="FEDS Travel" href="/PandC/FEDSTravel">
-    Get information about FEDS Travel.
+  <Card title="Additional FEDS Events" href="/PandC/FedsProjects/AdditionalFedsEvents/TeamWebsiteUpdateGuide">
+    Discover our additional events / projects that are not otherwise mentioned in previous documents.
   </Card>
 </Cards>
 
