--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,9 @@ import Head from 'next/head';
 
 Welcome to FRC Team 201's Tools and Resources! This guide is a comprehensive collection of tutorials, notes, and resources designed to help you master the tools and technologies used by our team. Whether you're a new member just starting your robotics journey or a seasoned veteran looking to sharpen your skills, this guide has something for everyone. It's a work in progress and will be updated regularly with new content and resources.
 
+## Our Team's Mission
 
+The FEDS' mission is to inspire students to become STEM leaders through mentoring and innovation.
 
 ## Subgroups
 
@@ -34,7 +36,7 @@ To support your learning journey, we have a variety of subgroups that focus on d
         The strategy subgroup analyzes game data and develops game strategies for competitions. Members work on scouting, match analysis, and robot performance optimization.
     </Card>
     <Card title="Poeple & Culture" href="/PandC/Index" icon={FaBuildingShield()}>
-        The business subgroup focuses on fundraising, marketing, and team outreach. Members work on sponsorships, social media, and community events.
+        The People & Culture subgroup focuses on fundraising, marketing, team outreach, and more. Members work on sponsorship acquisition, social media, our impact portfolio, and advocacy efforts.
     </Card>
 
 </Cards>
