Added a couple problems+solutions, created 1/18 programming recap.

--- a/pages/Experiences/2025.mdx
+++ b/pages/Experiences/2025.mdx
@@ -1,46 +1,30 @@
 
-## Week 1
-
-### Day 1
-
-- **Type**: Lecture
-- **Time**: 1h
-- **Topic**: Introduction to the course
-- **Resources**: [Slides](https://slides
-- **Homework**: Read Chapter 1
-
-### Day 2
-
-- **Type**: Lab
-- **Time**: 2h
-- **Topic**: Setting up your development environment
-- **Resources**: [Instructions](https://instructions)
-- **Homework**: Install the required software
 
 ## Week 2
 
-### Day 1
+## 1/18/25
 
-- **Type**: Lecture
-- **Time**: 1h
-- **Topic**: Variables and data types
-- **Resources**: [Slides](https://slides)
-- **Homework**: Do the exercises
+Clocking in from 9:00 to 4:00 today, we worked on prototyping, CADing, and programming for our 2025 robot.
 
-### Day 2
+### **Programming:**
 
-- **Type**: Lab
-- **Time**: 2h
-- **Topic**: Control structures
-- **Resources**: [Instructions](https://instructions)
-- **Homework**: Write a program to solve a simple problem
+Here is a rundown of what we did today:
 
-## Week 3
+#### Organizing:
+We worked on better organizing our new laptop cabinet, to make sure our laptops, cables, etc. have correct places.
 
-### Day 1
 
-- **Type**: Lecture
-- **Time**: 1h
-- **Topic**: Functions
-- **Resources**: [Slides](https://slides)
-- **Homework**: Write a program to calculate the factorial of a number
+#### Limelight Progress:
+We flashed and calibrated the rest of the limelight 3’s that are for use this season, and we also began experimenting with solutions of getting 3 limelights powered and working on this years’ robot.
+
+
+#### Auton:
+First, we re-generated SpyderJR's (SPYDER's dev bot) with CTRE's swerve generator tool after several fixes to its' swerve modules last night.
+Early on in the day, we realized many of the measurements of our practice field were off. Most if not all of the measurements before half field *should* be right now 🙏
+Worked with SpyderJR to begin testing auton. We tested a [3.5-piece auto](https://imgur.com/U4cxS4H), and it worked quite well considering no tuning of swerve yet.
+**Also**, pathfinding to positions definitely works and is promising, as we tested it today. After limelight integration, pid tuning, and nailing down our odometry, it will work great for aligning to the reef posts this year 👍 
+
+Near the end of the day, we realized that one of our CANcoders on a swerve module was cutting in and out of power, causing unexpected rotations of the module occasionally while driving.
+we have found that the issue is because our battery can dig into wires connecting the module to power (oops 😅) while it shifts around in its "seat" in the robot. This will
+be the first issue we fix come Monday, so that we can continue with progress on auton.
+
