--- a/pages/Experiences/2025.mdx
+++ b/pages/Experiences/2025.mdx
@@ -28,3 +28,30 @@ Near the end of the day, we realized that one of our CANcoders on a swerve modul
 we have found that the issue is because our battery can dig into wires connecting the module to power (oops 😅) while it shifts around in its "seat" in the robot. This will
 be the first issue we fix come Monday, so that we can continue with progress on auton.
 
+
+## 1/20/25
+
+### **Programming:**
+
+#### Limelight Progress:
+
+First, we proved that we can use 3 limelights at once through the radio. This didn't work Saturday but worked today, which is great news. 
+Additionally, we were able to use a limelight that was previously giving us trouble today, and all of them are working fine. 
+Today, we attempted an upgrade on the limelight from 3 -> 3G [(Swapping the camera module)](https://docs.limelightvision.io/docs/docs-limelight/hardware/limelight-3-global-shutter-upgrade), but were not able to as we unfortunately had 
+purchased the wrong camera upgrade. We will try again once we get the correct one, it looks promising, too! 😄
+
+#### Auton Progress:
+
+Today, the wiring for the CANcoder on our back right swerve module was fixed, and now functions as normal. This is great news for our autons and testing. Along with that, we made a large discovery that **Completely** changed the auton game. Our 4 inch diameter swerve wheels are not *actually* that large. 
+After re-measuring them, we found that they are actually 3.75 inches in diameter. This would explain the previous error we were seeing in our 
+autons, and after changing wheel radius in code, the incorrect distances vanished (Yay 🎉). Additionally, we began our work to perfect our auto 
+paths. We have nailed down a 3 coral auto from center line, and are hoping to be able to further optimize to a 4-piece by our competitions. 
+[(See here)](https://imgur.com/a/Qjjf39E)
+
+#### Logging Progress:
+
+This year, one of our goals is to use logging and match reviewing through AdvantageScope to its' highest potential, and today, we made some great 
+progress in using it. See [this video](https://imgur.com/a/hwpz6Zl) of a logging visualization of our auton test bot, performing an auto, 
+through Advantagescope XR.
+
+
