added 1/25/25 week recap

--- a/pages/Experiences/2025.mdx
+++ b/pages/Experiences/2025.mdx
@@ -55,3 +55,22 @@ progress in using it. See [this video](https://imgur.com/a/hwpz6Zl) of a logging
 through Advantagescope XR.
 
 
+## 1/25/25
+
+### **Programming:**
+
+#### Limelight Progress:
+
+During this week of work, we were able to implement limelight's metatag localization into a test swerve bot. After having a little trouble with getting it situated, it is now complete and fully 
+up-and-running! Additionally, we began implementation of auto-alignment to reef poles, using the tid networktable property. We have found the most amount of trouble with this, but are hoping to 
+fully implement it over the course of the next week. Additionally, the correct camera modules came to upgrade our ll3's to ll3G. We are currently in the process of performing this upgrade, and 
+we are excited to test it out.
+
+#### Robot Starter Code 
+
+This week, we were able to get enough information from CAD to create starter code for the subsystems on this years' robot. This code will allow us to stay on track once we get a physical robot,
+and get ahead of any setbacks that may block our way. See the GitHub repository [here](https://github.com/feds201/Scarlett).
+
+#### Looking Forward
+
+With roughly two weeks until the programming team gets a full robot, we are making sure we get all of the things we can get done without a robot finished, and we're right on schedule so far!
