2/01 update to 2025 season tracker

--- a/pages/Experiences/2025.mdx
+++ b/pages/Experiences/2025.mdx
@@ -74,3 +74,29 @@ and get ahead of any setbacks that may block our way. See the GitHub repository 
 #### Looking Forward
 
 With roughly two weeks until the programming team gets a full robot, we are making sure we get all of the things we can get done without a robot finished, and we're right on schedule so far!
+
+
+## 2/01/25
+
+### **Programming:**
+
+#### Limelight issues:
+
+After upgrading limelight 3s with the Limelight 3G camera module, we began to encounter several issues with them. Out of the four we upgraded, one consistently works, which tends to overheat easily.
+Because of our vision goals this year, our goal is to solve this issue so that we may see an upgraded limelight 3 on our competition robot for even better vision data with the global shutter camera.
+On the other three upgraded limelights, we have seen partial or no functionality after performing the upgrade. We have isolated the issue to what we believe is the upgraded camera module itself, as 
+replacing the original camera from the limelight 3 restores its' functionality. While this is definitely a roadblock in getting more than one upgraded limelight 3 onto a test bot, we are staying positive
+and continuing to work towards a solution.
+
+#### Starter Code and Teaching:
+
+This week, we continued to work on getting our robot starter code ready to go for when we recieve the robot from the mechanical and electrical subteams in just about a week. We have been making steady progress on it,
+and we are finding ourselves in a good spot with our schedule. Additionally, we took time this week to continue refining the skills of newer programmers on the team with several training sessions on topics like subsystem
+and command writing. We are making great pace this year compared to last year, and are confident with how things are going in preparation for the time programming will have with the competition robot.
+
+#### Auto-alignment Up And Running:
+
+After many reiterations, our dynamic auto-alignment functionality to the reef poles has been successfully implemented. While we had tested this auto-alignment using pathplanner's pathfindThenFollowPath() command,
+this most recent progress included implementing limelight april-tag detection to determine the correct pole to align to. While this still needs to be tuned to work at its fullest capacity with our robot, we made 
+excellent progress with this this week.
+
