--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -66,3 +66,18 @@ FEDS Handbook has been created to help you learn about a general overview of wha
         The FEDS Handbook is a comprehensive guide to everything you need to know as a member of FEDS. It covers team structure, tools, resources, and more.
     </Card>
 </Cards>
+
+## Tools and Resources
+
+FRC teams and the resources they use aren't always the most environmentally friendly. This and being inspired by the rule in the manual G201, we wanted to understand as a team what our impact on our environment is and identify what steps we can take to reduce it.
+
+Our mission: Promote a team culture that cultivates good persons and increases sustainable practices at a team level.
+
+As a team we thought of many different projects that could further our goal. Ideas ranged from finding new uses for old FRC parts to eliminating single use items. Ideas have been prioritized so that we can achieve these goals over time.
+
+    <Card title="G201 Calculator" href="/G201Calculator" icon={FaExpeditedssl()}>
+        The G201 Calculator is a tool that helps teams calculate their environmental impact and identify areas for improvement. It provides a score based on the team's practices and offers suggestions for reducing their impact.
+    </Card>
+
+<button onClick={() => window.location.href='https://feds201.github.io/G201-Calculator/'} style={{borderRadius: '25px', padding: '10px 20px', backgroundColor: '#3D3D3D', color: '#fff', border: 'none', cursor: 'pointer'}}>Go to G201 Calculator</button>
+
